RESOLVED FIXED200731
Occasional hang under -[UIKeyboardTaskQueue lockWhenReadyForMainThread] when long-pressing non-editable text
https://bugs.webkit.org/show_bug.cgi?id=200731
Summary Occasional hang under -[UIKeyboardTaskQueue lockWhenReadyForMainThread] when ...
Wenson Hsieh
Reported 2019-08-14 13:11:29 PDT
Attachments
Patch (19.96 KB, patch)
2019-08-14 19:22 PDT, Wenson Hsieh
no flags
Patch (20.78 KB, patch)
2019-08-14 20:39 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-08-14 19:22:43 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2019-08-14 20:39:52 PDT
WebKit Commit Bot
Comment 3 2019-08-15 11:39:40 PDT
Comment on attachment 376348 [details] Patch Clearing flags on attachment: 376348 Committed r248733: <https://trac.webkit.org/changeset/248733>
WebKit Commit Bot
Comment 4 2019-08-15 11:39:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.